--- a/class5.html
+++ b/class5.html
@@ -22,7 +22,10 @@
             <option value="MTECH">MTECH</option>
         </select><br>
         dob:-<input type="date"><br>
-        gender:-<input type="radio"><br>
+        gender:-<input type="radio">male<br>
+        <input type="radio">female<br>
+        <input type="radio">other<br>
+        
         address:-<textarea cols="30" rows="10"></textarea><br>
         password:-<input type="password"><br>
         <input type="button" value="submit">
